# arising-sol

./: .gitignore  .prettierrc  Anchor.toml  package.json
.github/workflows/: test.yml
data/: accounts.ts  basic_materials.ts  common.ts  items.ts  quests.ts  raw_materials.ts  recipes.ts  stats.ts
migrations/: deploy.ts
programs/arising/: Cargo.toml
programs/arising/src/: characters.rs  checks.rs  codex.rs  config.rs  errors.rs  forge.rs  lib.rs  names.rs  quests.rs  recipes.rs  utils.rs
tests/: accounts.ts  arising.ts  utils.ts
