[package]
name = "arising"
version = "0.1.0"
description = "Solana program for the Arising game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arising"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26"
anchor-spl = "0.26"

